fix bug on mobile devices

--- a/assets/css/mediaquery.css
+++ b/assets/css/mediaquery.css
@@ -35,6 +35,10 @@
   }
   footer {
     padding: 20px 0 0 0;
+    width: 620px;
+  }
+  td.about_text {
+    width: 520px;
   }
 }
 @media only screen and (max-width: 640px) {
@@ -65,6 +69,13 @@
   }
   footer {
     padding: 12px 0 0 0;
+    width: 300px;
+  }
+  table.about tr {
+    float: center;
+  }
+  td.about_text {
+    width: 190px;
   }
 }
 /*-----------------------------------------------------------------------
